update chapter3 section3