@@ -2,11 +2,12 @@ package org.mqjd.flink.jobs.chapter3.section2;
 
 import static org.junit.Assert.assertEquals;
 
-import java.util.Arrays;
-import java.util.Comparator;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import org.junit.Test;
 import org.mqjd.flink.jobs.chapter3.section1.JobWithState;
+import org.mqjd.flink.jobs.chapter3.section2.core.States;
 import org.mqjd.flink.source.CustomIteratorSourceSplit;
 
 public class JobStateReaderTest {
@@ -14,18 +15,18 @@ public class JobStateReaderTest {
     private static final String JOB_YAML = "jobs/chapter3/section2/job.yaml";
 
     @Test
-    public void testStateRead() throws Exception {
+    public void testReadOperatorState() throws Exception {
         String[] args = {"-c", JobWithState.class.getName()};
-        JobState jobState = new JobStateReader().read(JOB_YAML, args);
-        List<CustomIteratorSourceSplit> sourceReaderState = jobState.getState(0)
-            .getState(JobStateReader.SPLITS_STATE_DESC);
-        sourceReaderState.sort(Comparator.comparingInt(CustomIteratorSourceSplit::getSplitId));
-        List<CustomIteratorSourceSplit> expectedSplits = Arrays.asList(
-            new CustomIteratorSourceSplit(0, 149, 4, 0),
-            new CustomIteratorSourceSplit(0, 150, 4, 1),
-            new CustomIteratorSourceSplit(0, 151, 4, 2),
-            new CustomIteratorSourceSplit(0, 152, 4, 3)
-        );
-        assertEquals(expectedSplits, sourceReaderState);
+        JobStateBackend jobStateBackend = new JobStateReader().read(JOB_YAML, args);
+        Map<Integer, List<CustomIteratorSourceSplit>> actualState = jobStateBackend.getVertexStateBackend(
+                0)
+            .readOperatorState(States.SOURCE_SPLITS_STATE_DESC);
+
+        Map<Integer, List<CustomIteratorSourceSplit>> expectState = new HashMap<>();
+        expectState.put(0, List.of(new CustomIteratorSourceSplit(0, 150, 4, 1)));
+        expectState.put(1, List.of(new CustomIteratorSourceSplit(0, 151, 4, 2)));
+        expectState.put(2, List.of(new CustomIteratorSourceSplit(0, 152, 4, 3)));
+        expectState.put(3, List.of(new CustomIteratorSourceSplit(0, 149, 4, 0)));
+        assertEquals(expectState, actualState);
     }
 }
